# try_opengl

./: CMakeLists.txt  camera.cpp  camera.h  cube.fs  cube.vs  floor.fs  floor.vs  floorShader.fs  floorShader.vs  grass.fs  grass.vs  lightingShader.fs  main.cpp  main.fs  main.vs  mesh.cpp  mesh.h  model.cpp  model.h  norm.fs  norm.vs  planet.vs  quad.fs  quad.vs  shader.cpp  shader.fs  shader.gs  shader.h  shader.vs  simpleDepthShader.gs  simpleDepthShader.vs
glad/include/glad/: glad.h
glad/src/: glad.c
